added solarized colorscheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@
 # Reload config
 bind r source-file ~/.tmux.conf \; display "Configuration reloaded..."
 
-source-file themes/tmux-colors-solarized/tmuxcolors-256.conf
+source-file ~/.tmux/themes/tmux-colors-solarized/tmuxcolors-256.conf
 #source-file themes/tmux-colors-solarized/tmuxcolors-light.conf
 
 # remove delay when pressing escape key
