set window title

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,10 @@ bind r source-file ~/.tmux.conf \; display "Configuration reloaded..."
 source-file ~/.tmux/themes/tmux-colors-solarized/tmuxcolors-256.conf
 #source-file themes/tmux-colors-solarized/tmuxcolors-light.conf
 
+# enable set title
+set -g set-titles on
+set -g set-titles-string "#W :: #T"
+
 # remove delay when pressing escape key
 set -sg escape-time 0
 
