cleanup: some cleanups and improvements

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,6 @@
 bind r source-file ~/.tmux.conf \; display "Configuration reloaded..."
 
 source-file ~/.tmux/themes/tmux-colors-solarized/tmuxcolors-256.conf
-#source-file themes/tmux-colors-solarized/tmuxcolors-light.conf
 
 # enable set title
 set -g set-titles on
@@ -25,19 +24,18 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# pane resizing (vim style)
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
-
-bind-key C-h resize-pane -L 5
-bind-key C-l resize-pane -R 5
-bind-key C-j resize-pane -D 5
-bind-key C-k resize-pane -U 5
+# repeatable pane resizing (vim style)
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
 
 # maximize and minimize active pane
 unbind +
 bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
+
+# switch windows per Ctrl + arrow keys
+bind C-Right select-window -t:+1
+bind C-Left select-window -t:-1
