--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,9 @@ set -sg escape-time 0
 # set terminal colors
 set -g default-terminal "screen-256color"
 
+set -g history-limit 999999999
+set- g renumber-windows on
+
 # use xterm keyboard shortcuts
 set-window-option -g xterm-keys on
 
@@ -32,10 +35,21 @@ bind -r L resize-pane -R 5
 
 # maximize and minimize active pane
 unbind +
-bind + new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \; swap-pane -s tmux-zoom.0 \; select-window -t tmux-zoom
+bind + \
+  new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+  swap-pane -s tmux-zoom.0 \;\
+  select-window -t tmux-zoom
+
 unbind -
-bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
+bind - \
+  last-window \;\
+  swap-pane -s tmux-zoom.0 \;\
+  kill-window -t tmux-zoom
 
 # switch windows per Ctrl + arrow keys
 bind C-Right select-window -t:+1
 bind C-Left select-window -t:-1
+
+# bind T to start testing session
+bind T send-keys "tmuxifier load-window testing\n" \;
+bind W send-keys "tmuxifier load-window work\n" \;
