--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ set -sg escape-time 0
 set -g default-terminal "screen-256color"
 
 set -g history-limit 999999999
-set- g renumber-windows on
+#set-option -g renumber-windows on
 
 # use xterm keyboard shortcuts
 set-window-option -g xterm-keys on
