configuration: rebind zoom keys

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ set -sg escape-time 0
 set -g default-terminal "screen-256color"
 
 set -g history-limit 999999999
-#set-option -g renumber-windows on
+set -g renumber-windows on
 
 # use xterm keyboard shortcuts
 set-window-option -g xterm-keys on
@@ -33,18 +33,9 @@ bind -r K resize-pane -U 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-# maximize and minimize active pane
-unbind +
-bind + \
-  new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
-  swap-pane -s tmux-zoom.0 \;\
-  select-window -t tmux-zoom
-
-unbind -
-bind - \
-  last-window \;\
-  swap-pane -s tmux-zoom.0 \;\
-  kill-window -t tmux-zoom
+# zoom with plus and minus
+bind + resize-pane -Z
+bind - resize-pane -Z
 
 # switch windows per Ctrl + arrow keys
 bind C-Right select-window -t:+1
