bindings: behave like vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,12 +20,21 @@ set -g renumber-windows on
 
 # use xterm keyboard shortcuts
 set-window-option -g xterm-keys on
+set-window-option -g mode-keys vi
 
 # pane selection (vim style)
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# vim like selection and copy
+bind Escape copy-mode
+bind -t vi-copy Escape cancel
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'V' rectangle-toggle
+bind -t vi-copy 'y' copy-selection
+bind p paste-buffer
 
 # repeatable pane resizing (vim style)
 bind -r J resize-pane -D 5
@@ -44,3 +53,4 @@ bind C-Left select-window -t:-1
 # bind T to start testing session
 bind T send-keys "tmuxifier load-window testing\n" \;
 bind W send-keys "tmuxifier load-window work\n" \;
+bind S send-keys "tmuxifier load-window simulator1\n" \;
