add keybinding to clear screen; C-X

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,6 @@ bind -r L resize-pane -R 5
 
 # zoom with plus and minus
 bind + resize-pane -Z
-bind - resize-pane -Z
 
 # switch windows per Ctrl + arrow keys
 bind C-Right select-window -t:+1
@@ -54,3 +53,6 @@ bind C-Left select-window -t:-1
 bind T send-keys "tmuxifier load-window testing\n" \;
 bind W send-keys "tmuxifier load-window work\n" \;
 bind S send-keys "tmuxifier load-window simulator1\n" \;
+
+# clear buffer
+bind-key -n C-X send-keys -R \; clear-history\; send-keys "Enter"
